<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/rut_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rut" />

        <EditText
            android:id="@+id/rut_get"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/pass_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clave" />

        <EditText
            android:id="@+id/pass_get"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="OnLoginClick"
            android:text="@string/login" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>

